# Notion-ReAct-Agent

./: .gitignore  Dockerfile  README.md  cacert.pem  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: cicd.yaml
agent/: bot.py
api/: server.py
scripts/scripts/: setup_notion_databases.py  test_agent.py
tools/: weather.py
utils/: logger.py  main.py
