[project]
name = "notion-react-planner-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.136.0",
    "ipykernel>=7.2.0",
    "langchain>=1.2.15",
    "langchain-core>=1.2.28",
    "langchain-groq>=1.1.2",
    "uvicorn>=0.44.0",
]
